[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/menus/pause/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://music/paused.mp3" type="AudioStream" id=2]
[ext_resource path="res://sounds/resume.mp3" type="AudioStream" id=3]
[ext_resource path="res://sounds/pause.mp3" type="AudioStream" id=4]
[ext_resource path="res://resources/theme-submenu.tres" type="Theme" id=5]
[ext_resource path="res://scenes/ui-bits/SubmenuBackground.tscn" type="PackedScene" id=7]
[ext_resource path="res://resources/font.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://scenes/ui-bits/FullAlert.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=1]
resource_name = "BorderPulse"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Background2/Border:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.4 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 0.97, 0.97 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 3, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -0.5, -0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.97, 0.97 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 8 )

[node name="PauseMenu" type="Control" groups=["menus"]]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 300, 400 )
theme = ExtResource( 5 )
script = ExtResource( 1 )

[node name="BorderPulse" type="AnimationPlayer" parent="."]
autoplay = "BorderPulse"
anims/BorderPulse = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 2 )
anims/FadeOut = SubResource( 3 )
anims/RESET = SubResource( 6 )

[node name="Ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -5.0
bus = "Music"

[node name="PauseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="ResumeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="Background2" parent="." instance=ExtResource( 7 )]

[node name="Border" type="ReferenceRect" parent="Background2"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -265.0
margin_top = -360.0
margin_right = 265.0
margin_bottom = 360.0
rect_min_size = Vector2( 530, 720 )
border_color = Color( 1, 1, 1, 0.588235 )
border_width = 2.0
editor_only = false

[node name="Title" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -32.5
margin_bottom = 32.5
custom_fonts/font = SubResource( 5 )
text = "paused"
align = 1
valign = 1

[node name="Options" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = 73.5
margin_right = 112.0
margin_bottom = 198.5
rect_min_size = Vector2( 224, 0 )
custom_constants/separation = 25

[node name="Return" type="Button" parent="Options"]
margin_right = 224.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 32 )
theme_type_variation = "LargeLabel"
text = "return to game"

[node name="MainMenu" type="Button" parent="Options"]
margin_top = 70.0
margin_right = 224.0
margin_bottom = 115.0
rect_min_size = Vector2( 0, 32 )
theme_type_variation = "LargeLabel"
text = "main menu"

[node name="Quit" type="Button" parent="Options"]
margin_top = 140.0
margin_right = 224.0
margin_bottom = 185.0
rect_min_size = Vector2( 0, 32 )
theme_type_variation = "LargeLabel"
text = "save and quit"

[node name="MainAlert" parent="." instance=ExtResource( 9 )]
visible = false

[node name="QuitAlert" parent="." instance=ExtResource( 9 )]
visible = false

[connection signal="pressed" from="Options/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="Options/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Options/Quit" to="." method="_on_Quit_pressed"]
[connection signal="confirmed" from="MainAlert" to="." method="_on_MainAlert_confirmed"]
[connection signal="exited" from="MainAlert" to="." method="_on_MainAlert_exited"]
[connection signal="confirmed" from="QuitAlert" to="." method="_on_QuitAlert_confirmed"]
[connection signal="exited" from="QuitAlert" to="." method="_on_QuitAlert_exited"]
